K8s-Configs/order-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: order-service
  labels: 
    app: order-service
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: order-service
  template: 
    metadata: 
      labels: 
        app: order-service
    spec: 
  #    hostAliases:
  #      - ip: "192.168.99.103"
  #        hostnames:
  #          - "kubeall.com"
      containers:
      - name: order-service
        image: med/order-service:1.0
        imagePullPolicy: Never
        volumeMounts: 
        - name: secret-volume
          mountPath: /etc/secret-volume
        ports: 
        - containerPort: 8080
      volumes: 
          - name: secret-volume
            secret: 
                secretName: microservice-k8s-secret
                items:
                  - key: order-database-user
                    path: order_user 
                  - key: order-database-password
                    path: order_password 
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30002
  type: LoadBalancer
