K8s-Configs/microservice-k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-k8s-ingress
spec: 
  rules:
  - host: smk8s.com
    http:
      paths:
      - path: /order
        backend:
          serviceName: order-service
          servicePort: 8080
      - path: /customer
        backend:
          serviceName: customer-service
          servicePort: 8081
